poll/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: poll-ingress

  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web

spec:
  rules:
  - host: poll.dop.io

    http:
      paths:
      - path: /
        pathType: Prefix

        backend:
          service:
            name: poll
            port:
              number: 80
